# utter

./: .gitignore  EXERCISE.md  README.md  audio_generator.py  prompts.py  pyproject.toml  schema.py
demo/: story_compiler.py  terminal_demo.py
prototype/Utter/Utter/: UtterApp.swift
prototype/Utter/Utter.xcodeproj/: project.pbxproj
prototype/Utter/Utter.xcworkspace/: contents.xcworkspacedata
prototype/Utter/UtterUITests/: UtterUITestsLaunchTests.swift
prototype/ios-xcode/Utter/: Podfile
stories/se/: beginner-fika.json
stt/: requirements.txt  stt_run_basic.py
stt/py_speech_rec_module/: module_testing.py
stt/src/: microphone_recognition.py  simple_vosk.py
stt/vosk/: simple_vosk.py  vosk_test.py
tech-testing/: requirements.txt
tech-testing/.venv-windows/: pyvenv.cfg
tech-testing/.venv-windows/Scripts/: activate  activate.bat
tech-testing/speech-generation/: Original_tts_performance_results.txt  TTS_testing.py  TTS_testing_utils.py  openAI_TTS.py  tts_performance_results.txt
tech-testing/speech-generation/AWS_polly/: test.py
tech-testing/speech-recognition/: assemblyai_test.py  deepgram-test.py  distil-whisper.py  medium_article_functions.py  whisper-base-test.py  whisper-small-test.py  whisper_test.py
tech-testing/speech-recognition/py_speech_rec_module/: background_listening.py  (+2 more)
tech-testing/tech-integration/: asr.py  main.py
tech-testing/text-generation/: chatgpt_api.py  chatgpt_api_summary.py  requirements.txt  towards_data_science.py
tts/: requirements.txt
visualizer/: README.md  index.html  script.js  styles.css
(+81 files in other folders)
